--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,23 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+  --main-font-weight-title: 700;
+  --main-font-weight-text: 400;
+  --bg-color: #fff;
+}
+
+:root.theme-dark {
+  --main-font-weight-title: 785;
+  --main-font-weight-text: 465;
+  --bg-color: #000;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-font-weight-title: 785;
+    --main-font-weight-text: 465;
+    --bg-color: #000;
+  }
+}
