--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,6 +7,10 @@
   --main-font-weight-text: 400;
 
   --bg-color: #fff;
+
+  --bg-gradient: repeating-linear-gradient(#d3d3d3 0px 2px, transparent 2px 4px), 
+                 repeating-linear-gradient(90deg, #d3d3d3 0px 2px, transparent 2px 4px),
+                 linear-gradient(#e7e7e7 0.01%, #e7e7e7, #1a1a1a);
 }
 
 
