--- a/styles/style.css
+++ b/styles/style.css
@@ -17,10 +17,247 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  padding-block: 100px;
   font-family: var(--main-font), sans-serif;
-  font-variation-settings: 'wght' var(--main-font-weight-text);
+  font-variation-settings: var(--main-font-weight-text);
   background-color: var(--bg-color);
-  background-image: var(--bg-gradient);
+  background-image: repeating-linear-gradient(var(--grid-gradient-color) 0px 2px, transparent 2px 4px), 
+                    repeating-linear-gradient(90deg, var(--grid-gradient-color) 0px 2px, transparent 2px 4px),
+                    linear-gradient(var(--bg-gradient-color-main) 0.01%, var(--bg-gradient-color-main), var(--bg-gradient-color-secondary));
   background-size: cover;
-  height: 960px;
+  background-attachment: fixed;
+}
+
+.header {
+  margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid var(--main-color);
+  color: var(--main-color);
+  font-family: var(--accent-font), monospace;
+  background-color: var(--bg-color);
+  text-transform: uppercase;
+  padding-block-start: clamp(120px, 9.4vi, 136px);
+  padding-block-end: 26px;
+}
+
+.header__logo {
+  font-size: clamp(49px, 4.5vi, 65px);
+  font-weight: normal;
+}
+
+.header__title {
+  font-size: clamp(14px, 1.6vi, 23px);
+  margin-block-start: 21px;
+  font-weight: normal;
+}
+
+.theme-menu__list {
+  margin-block-start: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+}
+
+.theme-menu__button {
+  position: relative;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  font-size: 14px;
+  line-height: 1;
+  margin-inline-start: 20px;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled:before {
+  content: '▶';
+  position: absolute;
+  inset-inline-start: -20px;
+  animation-name: currentTheme;
+  animation-duration: 0.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button:focus-visible {
+  opacity: 0.6;
+}
+
+.theme-menu__button:after {
+  content: '';
+  position: absolute;
+  inset-block-end: -2px;
+  inset-inline-start: 0;
+  width: 100%;
+  height: 2px;
+  background-color: currentColor;
+  transform: scaleX(0);
+  transform-origin: 0 50%;
+  transition: transform 0.1s linear;
+}
+
+.theme-menu__button:focus-visible:after {
+  transform: scaleX(1);
+}
+
+.main {
+  margin-inline: auto;
+  margin-block-start: 100px;
+}
+
+.card {
+  border: 2px solid var(--main-color);
+  background-color: var(--bg-color);
+  color: var(--main-color);
+}
+
+.card__title {
+  font-size: 18px;
+  line-height: 19px;
+  font-variation-settings: var(--main-font-weight-title);
+  margin: 6px 10px;
+}
+
+.card__image-container {
+  position: relative;
+}
+
+.card__image {
+  width: 100%;
+  border-block: 2px solid var(--main-color);
+}
+
+.card__image-label {
+  position: absolute;
+  inset-block-start: 25px;
+  inset-inline-end: 25px;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+  color: var(--main-color);
+  text-shadow: 0 0 2px var(--bg-color);
+}
+
+
+@supports(-webkit-text-stroke: 1px var(--bg-color)) {
+  .card__image-label {
+      -webkit-text-stroke: 1px var(--bg-color);
+      text-shadow: none;
+  }
+} 
+
+.card__content {
+  padding: 23px 25px;
+}
+
+.card__text {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.card__buttons {
+  display: flex;
+  gap: 5px;
+  width: max-content;
+  margin-block-start: 23px;
+  margin-inline-start: auto;
+}
+
+.card__like-button {
+  display: block;
+  padding: 10px 35px;
+}
+
+.card__icon-button {
+  display: flex;
+  height: min-content;
+  background-color: transparent;
+  border: 2px solid transparent;
+  transition: border 0.3s ease;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  outline: none;
+  border: 2px solid var(--main-color);
+}
+
+.card__icon-button .sparks {
+  opacity: 0;
+}
+
+
+
+
+
+
+
+.button {
+  position: relative;
+  background-color: var(--bg-color);
+  border: 2px solid var(--main-color);
+  transition: box-shadow 0.3s ease;
+}
+
+
+
+.button:after {
+  content: '';
+  position: absolute;
+  inset-inline-start: 0;
+  inset-block-start: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-color);
+  transform: scaleX(0);
+  transform-origin: 0 50%;
+  transition: transform 0.5s ease-in-out;
+}
+
+.button:hover:after {
+  transform: scaleX(1);
+}
+
+.button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--main-color);
+}
+
+.button__text {
+  display: block;
+  font-size: 14px;
+  line-height: 90%;
+  font-family: var(--accent-font), monospace;
+  position: relative;
+  z-index: 5;
+  color: var(--bg-color);
+  mix-blend-mode: difference;
+}
+
+.adaptive-content {
+  inline-size: var(--content-size);
 }
