--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,32 +5,55 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 
+
+/* ----- Светлая тема ----- */
 :root.theme-light {
   --main-font-weight-title: 700;
   --main-font-weight-text: 400;
+  --main-color: #000;
   --bg-color: #fff;
-  --bg-gradient: repeating-linear-gradient(#d3d3d3 0px 2px, transparent 2px 4px), 
-                 repeating-linear-gradient(90deg, #d3d3d3 0px 2px, transparent 2px 4px),
-                 linear-gradient(#e7e7e7 0.01%, #e7e7e7, #1a1a1a);
-
+  --grid-gradient-color: #d3d3d3;
+  --bg-gradient-color-main: #e7e7e7;
+  --bg-gradient-color-secondary: #1a1a1a;
 }
 
+.theme-light .button__text {
+  color: var(--bg-color);
+}
+
+/* ----- Темная тема ----- */
 :root.theme-dark {
   --main-font-weight-title: 785;
   --main-font-weight-text: 465;
+  --main-color: #00CC14;
   --bg-color: #000;
-  --bg-gradient: repeating-linear-gradient(#000 0px 2px, transparent 2px 4px), 
-                 repeating-linear-gradient(90deg, #000 0px 2px, transparent 2px 4px),
-                 linear-gradient(#007f0c 0.01%, #007f0c, #004306);
+  --grid-gradient-color: #000;
+  --bg-gradient-color-main: #007f0c;
+  --bg-gradient-color-secondary: #004306;
 }
+
+.theme-dark .button__text {
+  color: var(--main-color);
+}
+
+
+
+
+
+
 
 @media (prefers-color-scheme: dark) {
   :root {
     --main-font-weight-title: 785;
     --main-font-weight-text: 465;
+    --main-color: #00CC14;
     --bg-color: #000;
-    --bg-gradient: repeating-linear-gradient(#000 0px 2px, transparent 2px 4px), 
-                   repeating-linear-gradient(90deg, #d3d3d3 0px 2px, transparent 2px 4px),
-                   linear-gradient(#007f0c 0.01%, #007f0c, #004306);
+    --grid-gradient-color: #000;
+    --bg-gradient-color-main: #007f0c;
+    --bg-gradient-color-secondary: #004306;
+  }
+
+  .button__text {
+    color: var(--main-color);
   }
 }
