--- a/styles/style.css
+++ b/styles/style.css
@@ -186,7 +186,9 @@
 
 .card__like-button {
   display: block;
-  padding: 10px 35px;
+  padding-block: 10px;
+  text-align: center;
+  width: 130px;
 }
 
 .card__icon-button {
@@ -206,24 +208,12 @@
   border: 2px solid var(--main-color);
 }
 
-.card__icon-button .sparks {
-  opacity: 0;
-}
-
-
-
-
-
-
-
 .button {
   position: relative;
   background-color: var(--bg-color);
   border: 2px solid var(--main-color);
   transition: box-shadow 0.3s ease;
 }
-
-
 
 .button:after {
   content: '';
