--- a/styles/style.css
+++ b/styles/style.css
@@ -15,9 +15,8 @@
 */
 
 .page {
-  min-inline-size: 320px;
-  min-block-size: 100dvb;
   padding-block: 100px;
+  color: var(--main-color);
   font-family: var(--main-font), sans-serif;
   font-variation-settings: var(--main-font-weight-text);
   background-color: var(--bg-color);
@@ -26,35 +25,38 @@
                     linear-gradient(var(--bg-gradient-color-main) 0.01%, var(--bg-gradient-color-main), var(--bg-gradient-color-secondary));
   background-size: cover;
   background-attachment: fixed;
+  min-inline-size: 320px;
+  min-block-size: 100dvb;
 }
 
 .header {
-  margin-inline: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 2px solid var(--main-color);
-  color: var(--main-color);
-  font-family: var(--accent-font), monospace;
-  background-color: var(--bg-color);
-  text-transform: uppercase;
   padding-block-start: clamp(120px, 9.4vi, 136px);
   padding-block-end: 26px;
+
+  font-family: var(--accent-font), monospace;
+  text-transform: uppercase;
+  background-color: var(--bg-color);
 }
 
 .header__logo {
   font-size: clamp(49px, 4.5vi, 65px);
-  font-weight: normal;
 }
 
 .header__title {
-  font-size: clamp(14px, 1.6vi, 23px);
   margin-block-start: 21px;
   font-weight: normal;
+  font-size: clamp(14px, 1.6vi, 23px);
+}
+
+.theme-menu {
+  margin-block-start: 23px;
 }
 
 .theme-menu__list {
-  margin-block-start: 24px;
   display: flex;
   flex-direction: column;
   gap: 11px;
@@ -62,12 +64,11 @@
 
 .theme-menu__button {
   position: relative;
-  text-transform: uppercase;
-  background-color: transparent;
+  margin-inline-start: 20px;
   border: none;
   font-size: 14px;
-  line-height: 1;
-  margin-inline-start: 20px;
+  text-transform: uppercase;
+  background-color: transparent;
   transition: opacity 0.3s ease;
 }
 
@@ -79,12 +80,11 @@
 .theme-menu__button:disabled:before {
   content: '▶';
   position: absolute;
-  inset-inline-start: -20px;
   animation-name: currentTheme;
-  animation-duration: 0.5s;
+  animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
-  animation-direction: alternate;
+  animation-duration: 0.5s;
 }
 
 .theme-menu__button:hover {
@@ -103,14 +103,14 @@
 .theme-menu__button:after {
   content: '';
   position: absolute;
-  inset-block-end: -2px;
-  inset-inline-start: 0;
   width: 100%;
   height: 2px;
   background-color: currentColor;
+  transition: transform 0.1s linear;
   transform: scaleX(0);
   transform-origin: 0 50%;
-  transition: transform 0.1s linear;
+  inset-block-end: -2px;
+  inset-inline-start: 0;
 }
 
 .theme-menu__button:focus-visible:after {
@@ -118,49 +118,88 @@
 }
 
 .main {
-  margin-inline: auto;
   margin-block-start: 100px;
+}
+
+.main__list {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
 
 .card {
   border: 2px solid var(--main-color);
   background-color: var(--bg-color);
-  color: var(--main-color);
 }
 
 .card__title {
+  margin: 5px 10px;
   font-size: 18px;
-  line-height: 19px;
+  line-height: 21px;
   font-variation-settings: var(--main-font-weight-title);
-  margin: 6px 10px;
 }
 
 .card__image-container {
   position: relative;
+  border-block: 2px solid var(--main-color);
 }
 
 .card__image {
+  display: block;
   width: 100%;
-  border-block: 2px solid var(--main-color);
+  object-fit: cover;
+  aspect-ratio: 1 / 1;
+}
+
+.image-road {
+  filter: contrast(150%);
+}
+
+.image-robot {
+  filter: grayscale(80%);
+}
+
+.image-knight {
+  filter: sepia(0.8);
+}
+
+.image-cat {
+  filter: saturate(30%);
+}
+
+.image-family {
+  filter: brightness(50%);
+}
+
+.image-pc {
+  filter: saturate(500%) brightness(50%);
+}
+
+.image-mood {
+  filter: hue-rotate(0.25turn);
+}
+
+.image-entrance {
+  filter: blur(3px);
 }
 
 .card__image-label {
   position: absolute;
-  inset-block-start: 25px;
-  inset-inline-end: 25px;
+  z-index: 2;
+  opacity: 0.5;
   font-family: var(--accent-font);
   font-size: 14px;
-  mix-blend-mode: hard-light;
-  opacity: 0.5;
-  color: var(--main-color);
+  text-transform: uppercase;
   text-shadow: 0 0 2px var(--bg-color);
+  inset-block-start: 25px;
+  inset-inline-end: 25px;
+  mix-blend-mode: hard-light;
 }
-
 
 @supports(-webkit-text-stroke: 1px var(--bg-color)) {
   .card__image-label {
-      -webkit-text-stroke: 1px var(--bg-color);
       text-shadow: none;
+      -webkit-text-stroke: 1px var(--bg-color);
   }
 } 
 
@@ -171,7 +210,7 @@
 .card__text {
   display: flex;
   flex-direction: column;
-  gap: 27px;
+  gap: 29px;
   font-size: 18px;
   line-height: 21px;
 }
@@ -180,22 +219,21 @@
   display: flex;
   gap: 5px;
   width: max-content;
-  margin-block-start: 23px;
   margin-inline-start: auto;
+  margin-block-start: 25px;
 }
 
 .card__like-button {
   display: block;
-  padding-block: 10px;
+  min-width: 130px;
+  padding: 10px 10px;
   text-align: center;
-  width: 130px;
 }
 
 .card__icon-button {
   display: flex;
-  height: min-content;
-  background-color: transparent;
   border: 2px solid transparent;
+  background-color: transparent;
   transition: border 0.3s ease;
 }
 
@@ -204,28 +242,48 @@
 }
 
 .card__icon-button:focus-visible {
-  outline: none;
   border: 2px solid var(--main-color);
+  outline: none;
+}
+
+.footer {
+  margin-block-start: 50px;
+}
+
+.footer__button {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-inline: auto;
+  padding: 15px 20px;
+}
+
+.button-floppy {
+  position: relative;
+  z-index: 5;
+  width: 21px;
+  aspect-ratio: 1 / 1;
+  mix-blend-mode: difference;
 }
 
 .button {
   position: relative;
-  background-color: var(--bg-color);
   border: 2px solid var(--main-color);
+  background-color: var(--bg-color);
   transition: box-shadow 0.3s ease;
 }
 
 .button:after {
   content: '';
   position: absolute;
-  inset-inline-start: 0;
-  inset-block-start: 0;
   width: 100%;
   height: 100%;
   background-color: var(--main-color);
+  transition: transform 0.5s ease-in-out;
   transform: scaleX(0);
   transform-origin: 0 50%;
-  transition: transform 0.5s ease-in-out;
+  inset-inline-start: 0;
+  inset-block-start: 0;
 }
 
 .button:hover:after {
@@ -233,21 +291,66 @@
 }
 
 .button:focus {
-  outline: none;
   box-shadow: 2px 2px 0 var(--main-color);
+  outline: none;
 }
 
 .button__text {
-  display: block;
-  font-size: 14px;
-  line-height: 90%;
-  font-family: var(--accent-font), monospace;
   position: relative;
   z-index: 5;
-  color: var(--bg-color);
+  display: block;
+  font-family: var(--accent-font), monospace;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 90%;
   mix-blend-mode: difference;
 }
 
 .adaptive-content {
+  margin-inline: auto;
   inline-size: var(--content-size);
+}
+
+.dialog[open] {
+  display: grid;
+  align-items: center;
+  gap: 30px 20px;
+  max-width: min(91%, 353px);
+  padding: 30px;
+  color: var(--main-color);
+  font-family: var(--accent-font), monospace;
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+  background-color: var(--bg-color);
+}
+
+.dialog::backdrop {
+  opacity: 0.75;
+  background-color: #000;
+}
+
+.dialog__content-floppy {
+  width: 39px;
+}
+
+.dialog__button {
+  grid-column: 1 / 3;
+  padding-block: 12px;
+  text-transform: uppercase;
+}
+
+
+@media (width <= 375px) {
+  .footer__button {
+    flex-direction: column;
+  }
+
+  .button-floppy {
+    width: 28px;
+  }
+
+  .dialog[open] {
+    padding-inline: 40px;
+  }
 }
