--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,6 @@
   padding-block: 100px;
   color: var(--main-color);
   font-family: var(--main-font), sans-serif;
-  font-variation-settings: var(--main-font-weight-text);
   background-color: var(--bg-color);
   background-image: repeating-linear-gradient(var(--grid-gradient-color) 0px 2px, transparent 2px 4px), 
                     repeating-linear-gradient(90deg, var(--grid-gradient-color) 0px 2px, transparent 2px 4px),
@@ -27,6 +26,12 @@
   background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+}
+
+@supports (font-variation-settings: var(--main-font-weight-text)) {
+  .page {
+    font-variation-settings: var(--main-font-weight-text);
+  }
 }
 
 .header {
@@ -136,7 +141,12 @@
   margin: 5px 10px;
   font-size: 18px;
   line-height: 21px;
-  font-variation-settings: var(--main-font-weight-title);
+}
+
+@supports (font-variation-settings: var(--main-font-weight-title)) {
+  .card__title {
+    font-variation-settings: var(--main-font-weight-title);
+  }
 }
 
 .card__image-container {
