--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,5 +10,5 @@
   --grid-gradient-color: #d3d3d3;
   --bg-gradient-color-main: #e7e7e7;
   --bg-gradient-color-secondary: #1a1a1a;
-  --heart-color: #FF0000
+  --heart-color: #FF0000;
 }
