--- a/styles/animations.css
+++ b/styles/animations.css
@@ -56,7 +56,7 @@
 }
 
 .card__icon-button:hover .core {
-  fill: var(--main-color);
+  fill: var(--main-color, #000);
   transition: fill 0.3s linear 0.03s;
 }
 
@@ -65,17 +65,17 @@
 }
 
 .card__icon-button:hover .main-body {
-  fill: var(--main-color);
+  fill: var(--main-color, #000);
   transition: fill 0.3s linear 0;
 }
 
 .card__icon-button:active .core {
-  fill: var(--heart-color);
+  fill: var(--heart-color, #FF0000);
   transition: fill 0.3s linear 0.03s;
 }
 
 .card__icon-button:active .main-body {
-  fill: var(--heart-color);
+  fill: var(--heart-color, #FF0000);
   transition: fill 0.3s linear 0;
 }
 
@@ -84,15 +84,15 @@
 }
 
 .like-icon.is-liked .core {
-  fill: var(--heart-color);
+  fill: var(--heart-color, #FF0000);
 }
 
 .like-icon.is-liked .main-body {
-  fill: var(--heart-color);
+  fill: var(--heart-color, #FF0000);
 }
 
 .like-icon.is-liked .contour {
-  fill: var(--heart-color);
+  fill: var(--heart-color, #FF0000);
   transition: fill 0.1s linear;
 }
 
